--- a/src/app/workflow/workflow.component.html
+++ b/src/app/workflow/workflow.component.html
@@ -1,4 +1,2 @@
-<app-workflow-item *ngFor="let item of items" [item]="item">
-</app-workflow-item>
-<app-workflow-item *ngIf="endItem" [item]="endItem">
-</app-workflow-item>
+<app-workflow-item *ngFor="let item of items" [item]="item"></app-workflow-item>
+<app-workflow-item *ngIf="endItem" [item]="endItem"></app-workflow-item>
