--- a/src/app/workflow/workflow.component.scss
+++ b/src/app/workflow/workflow.component.scss
@@ -10,7 +10,7 @@ $last-item-padding: 8px;
     .info {
       padding-bottom: $last-item-padding;
     }
-    .workflow-icon-container:after {
+    .icon-container:after {
       content: "";
       position: absolute;
       bottom: 0;
