--- a/src/app/kanban/kanban.component.html
+++ b/src/app/kanban/kanban.component.html
@@ -4,11 +4,11 @@
     </div>
     <div class="list-wrapper">
         <div *ngFor="let list of lists" class="list-container">
-            <vs-kanban-list [service]="service" [list]="list" [listHeaderTemplate]="listHeaderTemplate"
+            <app-kanban-list [service]="service" [list]="list" [listHeaderTemplate]="listHeaderTemplate"
                 [listFooterTemplate]="listFooterTemplate" [cardHeaderTemplate]="cardHeaderTemplate"
                 [cardBodyTemplate]="cardBodyTemplate" [cardFooterTemplate]="cardFooterTemplate"
                 [cardDragPlaceholderTemplate]="cardDragPlaceholderTemplate" [cardSize]="cardSize" [pageSize]="pageSize">
-            </vs-kanban-list>
+            </app-kanban-list>
         </div>
     </div>
     <div *ngIf="footerTemplate" class="footer">
