--- a/src/app/examples/example-kanban/example-kanban.component.html
+++ b/src/app/examples/example-kanban/example-kanban.component.html
@@ -1,9 +1,9 @@
-<vs-kanban [lists]="kanbanList" [service]="service" [headerTemplate]="headerTemplate"
+<app-kanban [lists]="kanbanList" [service]="service" [headerTemplate]="headerTemplate"
   [cardHeaderTemplate]="cardHeaderTemplate" [cardBodyTemplate]="cardBodyTemplate"
   [cardFooterTemplate]="cardFooterTemplate" [listHeaderTemplate]="listHeaderTemplate"
   [listFooterTemplate]="listFooterTemplate" [footerTemplate]="footerTemplate" [cardSize]="15"
   [cardDragPlaceholderTemplate]="cardDragPlaceholderTemplate" [pageSize]="15">
-</vs-kanban>
+</app-kanban>
 <!-- <ng-template #cardDragPlaceholderTemplate let-card="card"> meu card placeholder </ng-template>
 <ng-template #headerTemplate> meu header </ng-template>
 <ng-template #footerTemplate> meu footer </ng-template>
