--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,9 +1,8 @@
 <div>
   <app-workflow [(items)]="items" [endItem]="endItem"></app-workflow>
   <div *ngIf="selectedItem">
-    <!-- <h1 (click)="endItem = undefined">Matar End Item</h1> -->
     <h1>Item Selecionado</h1>
-    {{selectedItem.title}}
+    <app-workflow-view [item]="selectedItemView"></app-workflow-view>
   </div>
 </div>
 
